<resources>
    <string name="app_name">Mali Prestige</string>
    <string name="lb_empty"></string>
    <string name="lb_accueil">Accueil</string>
    <string name="lb_homme">Vêtements hommes</string>
    <string name="lb_femme">Vêtements femmes</string>
    <string name="lb_enfant">Vêtements enfants</string>
    <string name="lb_exotique">Produits exotiques</string>
    <string name="lb_compte">Mon compte</string>
    <string name="lb_commande">Mes commandes</string>
    <string name="lb_partager">Partager l\'application</string>
    <string name="lb_envoyer_msg">Envoyer un message</string>
    <string name="lb_deconnexion">Déconnexion</string>
    <string name="lb_connexion">Se connecter</string>
    <string name="lb_inscription">S\'inscrire</string>
    <string name="lb_ajouter_au_panier">Ajouter au panier</string>
    <string name="lb_form_pas_de_compte">Je n\'ai pas de compte</string>
    <string name="lb_btn_envoyer">Envoyer</string>
    <string name="lb_btn_fermer">Fermer</string>
    <string name="lb_app_update">Mettre à jour l\'application</string>
    <string name="lb_chargement_encours">Chargement en cours...</string>
    <string name="lb_deconnexion_encours">Déconnexion en cours...</string>
    <string name="lb_connexion_encours">Connexion en cours...</string>
    <string name="lb_inscription_encours">Inscription en cours...</string>
    <string name="lb_enregistrement_encours">Enregistrement en cours...</string>
    <string name="lb_delai_livraison">Livraison prévue entre le {DATE_LIVRAISON_1} et le {DATE_LIVRAISON_2}</string>

    <string name="lb_aucune_adresse">Aucune adresse pour le moment</string>
    <string name="lb_erreur_date_livraison">Erreur ! La date de livraison est nulle</string>
    <string name="lb_erreur_aucun_mode_paiement">Erreur ! Aucun mode de paiement sélectionné</string>
    <string name="lb_erreur_adresse_livraison">Erreur ! Aucune adresse de livraison</string>
    <string name="lb_erreur_adresse_facturation">Erreur ! Aucune adresse de facturation</string>
    <string name="lb_erreur_data">Erreur ! les données sont incohérentes</string>
    <string name="lb_erreur_montant">Erreur ! le montant est null</string>

    <string name="lb_btn_annuler">Annuler</string>
    <string name="lb_btn_valider">Valider</string>

    <string name="lb_recapitulatif_cmd">Récapitulatif de ma commande</string>
    <string name="lb_recapitulatif">Récapitulatif</string>
    <string name="lb_pas_commande_encours">Vous n\'avez pas de commande à finaliser.</string>

    <string name="google_market_link">market://details?id=com.maliprestige</string>

    <string name="lb_erreur_chargement">Erreur de chargement ! \n\nUne erreur est survenue pendant le chargement des données.</string>

    <string name="lb_partager_avec">Partager avec ...</string>
    <string name="lb_selection_messagerie">Sélectionnez une messagerie</string>
    <string name="lb_contact_adresse_email">habibatou.fofana@laposte.net</string>
    <string name="lb_demande_renseignement">Demande de renseignements</string>
    <string name="lb_message_partager_app">Bonjour, \n\nJe tiens à te faire découvrir l\'application android Mali Prestige.\nClique sur le lien qui apparaît en bas de ce message, et n\'hésite pas à en parler autour de toi.\n\nhttps://play.google.com/store/apps/details?id=com.maliprestige</string>

    <string name="lb_adressses_livraisons">ADRESSES DE LIVRAISONS</string>
    <string name="lb_nom_prenom">NOM </string>
    <string name="lb_email">E-MAIL </string>
    <string name="lb_telephones">N° TEL </string>
    <string name="lb_adressses_facturations">ADRESSES DE FACTURATIONS</string>
    <string name="lb_identite">IDENTITÉ</string>
    <string name="lb_mon_panier">MON PANIER</string>
    <string name="lb_ajouter_newAdresse">Ajouter une nouvelle adresse</string>
    <string name="lb_mode_paiements">MODE DE PAIEMENTS</string>
    <string name="lb_paiement_paypal">PAYPAL</string>
    <string name="lb_paiement_mandat_cash">MANDAT CASH</string>
    <string name="lb_paiement_virement">VIREMENT</string>
    <string name="lb_paiement_espece">ESPÈCE</string>

    <string name="lb_splash_message_error">Vous n\'avez pas de connexion internet. \nLe premier chargement de l\'application requiert une connexion internet.\nCette connexion permettra de communiquer avec le serveur de Mali Prestige.</string>

    <string name="lb_order_detail">Voir le détail</string>
    <string name="lb_detail_commande">Détail de la commande</string>
    <string name="lb_detail_facture">Détail de la facture</string>
    <string name="lb_order_regler">Régler la commande</string>
    <string name="lb_order_facture">Télécharger la facture</string>

    <string name="lb_form_search_keyword">Mot clé à rechercher</string>

    <string name="lb_new_adresse_facturation">Nouvelle adresse de facturation</string>
    <string name="lb_new_adresse_livraison">Nouvelle adresse de livraison</string>

    <string name="lb_date_livraison">DATE DE LA LIVRAISON</string>
    <string name="lb_montant_a_payer">MONTANT À PAYER</string>

    <string name="lb_panier_vide">Votre panier est vide.</string>
    <string name="lb_produit_ajout_succes">Produit ajouté au panier</string>
    <string name="lb_valider_mon_panier">Valider mon panier</string>
    <string name="lb_ajouter_mon_panier">Ajouter à mon panier</string>

    <string name="lb_livraison">Livraison</string>
    <string name="lb_qui_sommes_nous">Qui sommes-nous ?</string>
    <string name="lb_conditions_ventes">Conditions de ventes</string>

    <string name="lb_form_pasword_oublie">Mot de passe oublié</string>
    <string name="lb_connexion_automatique">Activez ma connexion automatique</string>

    <string name="lb_champ_obligatoire">Ce champ est obligatoire</string>
    <string name="lb_password_non_identique">Les mots de passe ne sont pas identiques</string>

    <string name="lb_aucune_commande">Vous n\'avez pas encore effectué de commande.</string>

    <string name="unstable_connection">Connexion internet instable</string>
    <string name="no_connection">Aucune connexion internet</string>
    <string name="lb_deconnexion_erreur">Erreur ! La déconnexion a échoué</string>

    <string name="lb_form_votre_nom">Votre nom</string>
    <string name="lb_form_votre_email">Votre adresse e-mail</string>
    <string name="lb_form_votre_password">Votre mot de passe</string>
    <string name="lb_form_votre_password_confirme">Confirmer votre mot de passe</string>
    <string name="lb_form_enregistrer">Enregistrer</string>
    <string name="lb_form_condition_vente">En vous inscrivant, vous acceptez nos conditions de ventes</string>
    <string name="lb_form_email_invalide">L\'adresse email n\'est pas valide</string>

    <string name="lb_form_adresse_nom">Nom</string>
    <string name="lb_form_adresse_prenom">Prénom</string>
    <string name="lb_form_adresse_adresse">Adresse</string>
    <string name="lb_form_adresse_cp">Code postal</string>
    <string name="lb_form_adresse_ville">Ville</string>
    <string name="lb_form_adresse_pays">Pays</string>

    <string name="lb_who_are_you">Qui êtes-vous ?</string>
    <string name="lb_identify_you">Veuillez vous identifier</string>

    <string-array name="liste_civilite">
        <item>Madame</item>
        <item>Monsieur</item>
    </string-array>

    <string name="mp_cgv_link">/conditions-de-ventes/</string>
    <string name="mp_livraison_link">/livraison/</string>
    <string name="mp_whois_link">/qui-sommes-nous/</string>
    <string name="mp_mentions_legales_link">/mentions-legales/</string>

    <string name="mp_json_hote_production">http://www.recette.maliprestige.com</string>
    <string name="mp_json_slide">/api/slides.json/</string>
    <!-- TYPE_PRODUIT = all|homme|femme|enfant|exotique et LIMIT_PRODUIT = 0 à n -->
    <string name="mp_json_produit">/api/type/{TYPE_PRODUIT}/limit/{LIMIT_PRODUIT}/produits.json/</string>
    <string name="mp_json_client_pwd_oublie">/api/client/mot-de-passe-oublie.json/</string>
    <string name="mp_json_client_commande">/api/client/token/{CLIENT_TOKEN}/commandes.json/</string>
    <string name="mp_json_client_connexion">/api/client/connexion.json/</string>
    <string name="mp_json_client_inscription">/api/client/inscription.json/</string>
    <string name="mp_json_client_deconnexion">/api/client/deconnexion.json/</string>
    <string name="mp_json_client_valider_commande">/api/client/valider/commande.json/</string>
    <string name="mp_json_client_ajouter_adresse">/api/client/ajouter/adresse/livraison-ou-facturation.json/</string>
    <string name="mp_json_client_paiement_paypal">/api/client/{CLIENT_TOKEN}/commande/numero/{NUMERO_COMMANDE}/paiement/paypal.json/</string>
    <string name="mp_json_client_detail_commande">/api/client/{CLIENT_TOKEN}/commande/numero/{NUMERO_COMMANDE}/detail.json/</string>
    <string name="mp_json_client_generer_facture">/api/client/{CLIENT_TOKEN}/detail/facture/numero/mp-{NUMERO_FACTURE}.pdf</string>
    <string name="mp_json_client_detail_facture">/api/client/{CLIENT_TOKEN}/facture/numero/{NUMERO_FACTURE}/detail.json/</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="lb_shopping">Mon panier</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_adresse_form">AdresseFormActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_diapo">DiapoActivity</string>
</resources>
